argo/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: argo-server
  namespace: kubeflow
  annotations:
    getambassador.io/config: |-
      ---
      apiVersion: ambassador/v0
      kind:  Mapping
      name: argo-mapping
      prefix: /argo/
      service: argo.$(namespace)
    app: argo
spec:
  ports:
  - name: web
    port: 2746
    targetPort: 2746
  selector:
    app: argo-server
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  name: workflow-controller-metrics
  namespace: kubeflow
spec:
  ports:
  - name: metrics
    port: 9090
    protocol: TCP
    targetPort: 9090
  selector:
    app: workflow-controller
